kubernetes/external-secrets-operator/overlays/sno/egress-firewall.yaml
apiVersion: k8s.ovn.org/v1
kind: EgressFirewall
metadata:
  name: default
  namespace: external-secrets-operator
spec:
  egress:
    # Control Plane
    - type: Allow
      to:
        nodeSelector:
          matchLabels:
            node-role.kubernetes.io/control-plane: ""
    - type: Allow
      to:
        dnsName: registry.arthurvardevanyan.com
    - type: Allow
      to:
        dnsName: vault.apps.okd.arthurvardevanyan.com
    - type: Deny
      to:
        cidrSelector: 0.0.0.0/0
